--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
 <activity android:name="DroidPadAbout" android:icon="@drawable/icon" android:label="About DroidPad"></activity>
 <activity android:name="DroidPadIntro" android:icon="@drawable/icon" android:label="DroidPad Help"></activity>
 </application>
-    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="4"/>
+    <uses-sdk android:targetSdkVersion="4" android:minSdkVersion="3"/>
 
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
