--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="uk.digitalsquid.droidpad" android:versionName="1.3.0" android:versionCode="130">
+      package="uk.digitalsquid.droidpad" android:versionCode="131" android:versionName="1.3.1">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:launchMode="singleTop" android:icon="@drawable/icon" android:name="uk.digitalsquid.droidpad.DroidPad" android:screenOrientation="portrait" android:label="DroidPad">
             <intent-filter>
