--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="uk.digitalsquid.droidpad" android:versionCode="131" android:versionName="1.3.1">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"/>
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="App">
         <activity android:launchMode="singleTop" android:icon="@drawable/icon" android:name="uk.digitalsquid.droidpad.DroidPad" android:screenOrientation="portrait" android:label="DroidPad">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
