--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="uk.digitalsquid.droidpad" android:versionCode="131" android:versionName="1.3.1">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"/>
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
+	
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+	<!-- <uses-permission android:name="android.permission.ADD_SYSTEM_SERVICE"></uses-permission>  -->
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+	
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="App">
         <activity android:launchMode="singleTop" android:icon="@drawable/icon" android:name="uk.digitalsquid.droidpad.DroidPad" android:screenOrientation="portrait" android:label="DroidPad">
             <intent-filter>
@@ -11,9 +19,9 @@
         </activity>
     
 
-<service android:name="uk.digitalsquid.droidpad.DroidPadServer" android:label="DroidPad">
+<service android:name="uk.digitalsquid.droidpad.DroidPadServicead">
 </service>
-<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad.DroidPadButtons" android:exported="false" android:excludeFromRecents="true" android:label="DroidPad Buttons">
+<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad.Buttons" android:excludeFromRecents="true" android:label="DroidPad Buttons">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 
@@ -30,12 +38,6 @@
 </activity>
 <activity android:name=".optiontabs.JSTab"></activity>
 </application>
-
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-<uses-permission android:name="android.permission.ADD_SYSTEM_SERVICE"></uses-permission>
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 
 
 
