--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,43 +5,29 @@
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
 	
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+	<!-- <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>  -->
 	<!-- <uses-permission android:name="android.permission.ADD_SYSTEM_SERVICE"></uses-permission>  -->
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 	
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="App">
-        <activity android:launchMode="singleTop" android:icon="@drawable/icon" android:name="uk.digitalsquid.droidpad.DroidPad" android:screenOrientation="portrait" android:label="DroidPad">
+
+		<service android:name="uk.digitalsquid.droidpad.DroidPadService">
+		</service>
+		<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad.Buttons" android:excludeFromRecents="true" android:label="DroidPad Buttons">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-    
-
-<service android:name="uk.digitalsquid.droidpad.DroidPadService">
-</service>
-<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad.Buttons" android:excludeFromRecents="true" android:label="DroidPad Buttons">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                
-            </intent-filter>
-</activity>
-<activity android:name="uk.digitalsquid.droidpad.SettingsMenu" android:icon="@drawable/icon" android:launchMode="singleTop" android:label="Settings"></activity>
-<activity android:name="DroidPadAbout" android:icon="@drawable/icon" android:label="About DroidPad"></activity>
-<activity android:name="DroidPadIntro" android:icon="@drawable/icon" android:label="DroidPad Help"></activity>
-<activity android:theme="@android:style/Theme.NoTitleBar" android:name="MainScreen" android:label="@string/new_app_name">
-    <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-    </intent-filter>
-</activity>
-<activity android:name=".optiontabs.JSTab"></activity>
-</application>
-
-
-
-
-
-
+		</activity>
+		<activity android:name="uk.digitalsquid.droidpad.SettingsMenu" android:icon="@drawable/icon" android:launchMode="singleTop" android:label="Settings"></activity>
+		<activity android:name="DroidPadAbout" android:icon="@drawable/icon" android:label="About DroidPad"></activity>
+		<activity android:name="DroidPadIntro" android:icon="@drawable/icon" android:label="DroidPad Help"></activity>
+		<activity android:theme="@android:style/Theme.NoTitleBar" android:name="MainScreen" android:label="@string/app_name">
+		    <intent-filter>
+		        <action android:name="android.intent.action.MAIN"/>
+		        <category android:name="android.intent.category.LAUNCHER"/>
+		    </intent-filter>
+		</activity>
+		<activity android:name=".optiontabs.JSTab"></activity>
+	</application>
 </manifest> 
