--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,20 +14,18 @@
 
 		<service android:name="uk.digitalsquid.droidpad.DroidPadService">
 		</service>
-		<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad.Buttons" android:excludeFromRecents="true" android:label="DroidPad Buttons">
+		<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad.Buttons" android:excludeFromRecents="true" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
 		</activity>
 		<activity android:name="uk.digitalsquid.droidpad.SettingsMenu" android:icon="@drawable/icon" android:launchMode="singleTop" android:label="Settings"></activity>
-		<activity android:name="DroidPadAbout" android:icon="@drawable/icon" android:label="About DroidPad"></activity>
-		<activity android:name="DroidPadIntro" android:icon="@drawable/icon" android:label="DroidPad Help"></activity>
+		<activity android:name="AboutActivity" android:icon="@drawable/icon" android:label="@string/about_title"></activity>
 		<activity android:theme="@android:style/Theme.NoTitleBar" android:name="MainScreen" android:label="@string/app_name">
 		    <intent-filter>
 		        <action android:name="android.intent.action.MAIN"/>
 		        <category android:name="android.intent.category.LAUNCHER"/>
 		    </intent-filter>
 		</activity>
-		<activity android:name=".optiontabs.JSTab"></activity>
 	</application>
 </manifest> 
