--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,7 @@
 		</activity>
 		<activity android:name="uk.digitalsquid.droidpad.SettingsMenu" android:icon="@drawable/icon" android:launchMode="singleTop" android:label="Settings"></activity>
 		<activity android:name="AboutActivity" android:icon="@drawable/icon" android:label="@string/about_title"></activity>
-		<activity android:theme="@android:style/Theme.NoTitleBar" android:name="MainScreen" android:label="@string/app_name">
+		<activity android:theme="@android:style/Theme.NoTitleBar" android:name=".DroidPad" android:label="@string/app_name">
 		    <intent-filter>
 		        <action android:name="android.intent.action.MAIN"/>
 		        <category android:name="android.intent.category.LAUNCHER"/>
