--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
 	<!-- <uses-permission android:name="android.permission.ADD_SYSTEM_SERVICE"></uses-permission>  -->
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
 	
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="App">
 
