--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="uk.digitalsquid.droidpad" android:versionCode="131" android:versionName="1.3.1">
+      package="uk.digitalsquid.droidpad2" android:versionCode="131" android:versionName="1.3.1">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"/>
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
 	
@@ -13,14 +13,14 @@
 	
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="App">
 
-		<service android:name="uk.digitalsquid.droidpad.DroidPadService">
+		<service android:name="uk.digitalsquid.droidpad2.DroidPadService">
 		</service>
-		<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad.Buttons" android:excludeFromRecents="true" android:label="@string/app_name">
+		<activity android:icon="@drawable/icon" android:launchMode="singleTop" android:screenOrientation="portrait" android:name="uk.digitalsquid.droidpad2.Buttons" android:excludeFromRecents="true" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
 		</activity>
-		<activity android:name="uk.digitalsquid.droidpad.SettingsMenu" android:icon="@drawable/icon" android:launchMode="singleTop" android:label="Settings"></activity>
+		<activity android:name="uk.digitalsquid.droidpad2.SettingsMenu" android:icon="@drawable/icon" android:launchMode="singleTop" android:label="Settings"></activity>
 		<activity android:name="AboutActivity" android:icon="@drawable/icon" android:label="@string/about_title"></activity>
 		<activity android:theme="@android:style/Theme.NoTitleBar" android:name=".DroidPad" android:label="@string/app_name">
 		    <intent-filter>
