--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,5 +27,6 @@
 		        <category android:name="android.intent.category.LAUNCHER"/>
 		    </intent-filter>
 		</activity>
+		<activity android:name="WebActivity" android:theme="@style/light"></activity>
 	</application>
 </manifest> 
