--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="uk.digitalsquid.droidpad2" android:versionCode="200" android:versionName="2.0">
+      package="uk.digitalsquid.droidpad" android:versionCode="200" android:versionName="2.0">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14"/>
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
 	
