--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="lib/sc-light-jdk15on-1.47.0.2.jar">
+	<classpathentry exported="true" kind="lib" path="lib/sc-light-jdk15on-1.47.0.2.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/droidpad-android.secure/lib/sc-light-jdk15on-1.47.0.2-javadoc.jar!/"/>
 		</attributes>
