--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="uk.digitalsquid.droidpad" android:versionCode="200" android:versionName="2.0">
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14"/>
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="17"/>
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
 	
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
@@ -13,7 +13,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<supports-screens android:anyDensity="true" android:largeScreens="true" android:smallScreens="true" android:xlargeScreens="true" android:normalScreens="true"/>
 	
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="App">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="App" android:allowBackup="true">
 		<activity android:icon="@drawable/icon" android:screenOrientation="portrait" android:name="Buttons" android:excludeFromRecents="true" android:label="@string/app_name" android:theme="@style/fullscreen">
 		</activity>
 		<activity android:name="SettingsMenu" android:icon="@drawable/icon" android:launchMode="singleTop" android:label="Settings"></activity>
